k8s/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: zero-trust-mesh-ext-authz
  namespace: default
spec:
  action: CUSTOM
  provider:
    name: "zero-trust-proxy-authz"
  rules:
  - to:
    - operation:
        paths: ["/*"]
